@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.376 2005/09/15 21:33:44 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.377 2005/09/15 22:45:43 codeman Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -9,7 +9,8 @@
   src/GLIUtility.py
   added get_grp_pkgs_from_cd() to return a list of packages in GRP for FE menus
   src/GenDialog.py 
-  still working on extra_packages
+  still working on extra_packages. transformed the list to new format.
+  added GRP indication to list.  untested.
   TODO lists updated.
   src/fe/dialog/gli-dialog.py
   spelling mistook.
